Correção exercicio2aula2

--- a/Semana_2/Exercicio2Aula2/index.html
+++ b/Semana_2/Exercicio2Aula2/index.html
@@ -8,21 +8,21 @@
 </head>
 <body>
     <h1>Aprenda cores em Italiano</h1>
-    <container>
+    <container class="giallo">
         <p>Giallo</p>
-        <div class="quadrado" id="giallo"></div>
+        <div class="quadrado qgiallo"></div>
     </container>
-    <container>
+    <container class="rosso">
         <p>Rosso</p>
-        <div class="quadrado" id="rosso"></div>
+        <div class="quadrado qrosso"></div>
     </container>
-    <container>
+    <container class="blue">
         <p>Blue</p>
-        <div class="quadrado" id="blue"></div>
+        <div class="quadrado qblue"></div>
     </container>
-    <container>
+    <container class="marrone">
         <p>Marrone</p>
-        <div class="quadrado" id="marrone"></div>
+        <div class="quadrado qmarrone"></div>
     </container>
 </body>
 </html>
