--- a/Semana_4/frontend-P004/index.html
+++ b/Semana_4/frontend-P004/index.html
@@ -26,7 +26,7 @@
         <p>Taxas Inclusas</p>
         <p>Em até 10x sem Juros</p>
       </div>
-      <button class="botao-card"><a href="#">Comprar</a></button>
+      <button onclick="capturar(0)" class="botao-card"><a href="#">Comprar</a></button>
     </div>
     <div class="card">
       <img class="image-card" src="assets/images/fortaleza-img.jpg" alt="imagem aérea de Fortaleza">
@@ -44,7 +44,7 @@
         <p>Taxas Inclusas</p>
         <p>Em até 10x sem Juros</p>
       </div>
-      <button class="botao-card"><a href="#">Comprar</a></button>
+      <button onclick="capturar(1)" class="botao-card"><a href="#">Comprar</a></button>
     </div>
     <div class="card">
       <img class="image-card" src="assets/images/campinas-img.jpg" alt="imagem aérea de Campinas">
@@ -62,9 +62,9 @@
         <p>Taxas Inclusas</p>
         <p>Em até 10x sem Juros</p>
       </div>
-      <button class="botao-card"><a href="#">Comprar</a></button>
+      <button onclick="capturar(2)" class="botao-card"><a href="#">Comprar</a></button>
     </div>
   </div>
+  <script src="index.js"></script>
 </body>
-
 </html>
